package shop.products;

public interface Housing {

    void services();

    void generateCost();

}
