package shop.products;

public interface Ticket {

    void generatePath();

    void generateCost();

}
