package shop.products;

public interface Tour {

    void generateCost();

    void putTransport();

}
